--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -10,7 +10,7 @@
 .nav__row {
   position: relative;
   width: 100%;
-  height: 130px;
+  height: 120px;
 }
 
 .nav__brand {
